--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 <head>
-    <title>Aroria</title>
-    <center><h1>Aroria Unblocking System </h1></center> <br> <br> <br> <br>
+    <title>Chiefkeefloader</title>
+    <center><h1>Chiefkeef unblocker V1 </h1></center> <br> <br> <br> <br>
 
 </head>
 <body>
     <input type="text" id="url" name="url" placeholder="Enter URL">
-    <button onclick="generateIframe()">Go Gaurdian Bypass</button>
+    <button onclick="generateIframe()">Bypass</button>
      <center> <h4> Some Sites Are Not Supported. </h4> 
-    <b> <p style="color:lightcoral;"> Youtube Alternative: piped.video </p>   </b>
+    <b> <p style="color:lightcoral;"> property of chiefkeefloader </p>   </b>
      </center>
 </body>
 </html>
