--- a/chiefkeefunblockerV1.html
+++ b/chiefkeefunblockerV1.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 <head>
-    <title>Chiefkeefloader</title>
+    <title>ChiefkeefUnblockerV1</title>
     <center><h1>Chiefkeef unblocker V1 </h1></center> <br> <br> <br> <br>
 
 </head>
