--- a/chiefkeefunblockerV1.html
+++ b/chiefkeefunblockerV1.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
 <head>
     <title>ChiefkeefUnblockerV1</title>
-    <center><h1>Chiefkeef unblocker V1 </h1></center> <br> <br> <br> <br>
-
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+    <script>
+        function openHtmlWithAboutBlank() {
+            var xhr = new XMLHttpRequest();
+            xhr.open('GET', 'open_html.py', true);
+            xhr.send();
+        }
+    </script>
 </head>
 <body>
     <input type="text" id="url" name="url" placeholder="Enter URL">
     <button onclick="generateIframe()">Bypass</button>
-     <center> <h4> Some sites may not work </h4> 
-    <b> <p style="color:lightcoral;"> property of chiefkeefloader </p>   </b>
-     </center>
+    <button onclick="openHtmlWithAboutBlank()">Open HTML with about:blank</button>
+    <center>
+        <h4> Some sites may not work </h4>
+        <b> <p style="color:lightcoral;"> property of chiefkeefloader </p> </b>
+    </center>
 </body>
 </html>
-
