--- a/chiefkeefunblockerV1.html
+++ b/chiefkeefunblockerV1.html
@@ -6,16 +6,18 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <script>
-        window.onload = function() {
-            window.history.replaceState({}, document.title, "about:blank");
-        };
+        if (window.location.href !== "about:blank") {
+            window.location.href = "about:blank";
+        }
     </script>
 </head>
 <body>
     <input type="text" id="url" name="url" placeholder="Enter URL">
     <button onclick="generateIframe()">Bypass</button>
     <center>
-        <h4> Some sites may not work </h4>
+        <h1>Chiefkeef unblocker V1</h1>
+        <br> <br> <br> <br>
+        <h4> Some sites may not work </h4> 
         <b> <p style="color:lightcoral;"> property of chiefkeefloader </p> </b>
     </center>
 </body>
